Connection to Inventory Module, issues resolved