@@ -15,7 +15,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
@@ -26,11 +25,8 @@ import com.project.exception.BookResourceNotFoundException;
 //import com.project.mapper.BookMapper;
 import com.project.models.Book;
 import com.project.repositories.BookRepository;
-import org.mockito.stubbing.OngoingStubbing;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
+import org.springframework.http.ResponseEntity;
 
 @ExtendWith(MockitoExtension.class)
 class BookServiceImplTestCase {
@@ -42,8 +38,12 @@ class BookServiceImplTestCase {
 	@Mock
 	private ModelMapper modelMapper;
 
+	@Mock
+	private InventoryInterface inventoryInterface;
+
     @InjectMocks
     private BookServiceImpl bookServiceImpl;
+
     
     private Book book;
     private BookDTO bookDTO;
@@ -55,7 +55,7 @@ class BookServiceImplTestCase {
     }
     
     @AfterEach
-	void tearDown() throws Exception {
+	void tearDown() {
 		bookRepository=null;
 		bookServiceImpl=null;
 		book=null;
@@ -63,22 +63,20 @@ class BookServiceImplTestCase {
     
 	@Test
 	void testGetAllBooks_positive() throws BookResourceNotFoundException {
-		when(bookRepository.findAll()).thenReturn(Arrays.asList(book));
+		when(bookRepository.findAll()).thenReturn(Collections.singletonList(book));
 		//when(bookMapper.bookListToBookDTOList(any())).thenReturn(Arrays.asList(bookDTO));
 		when(modelMapper.map(book, BookDTO.class)).thenReturn(bookDTO);when(modelMapper.map(book, BookDTO.class)).thenReturn(bookDTO);
 
         List<BookDTO> result = bookServiceImpl.getAllBooks();
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(bookDTO, result.get(0));
+        assertEquals(bookDTO, result.getFirst());
         
 	}
 	
 	@Test
 	void testGetAllBooks_negative() throws BookResourceNotFoundException{
-		assertThrows(BookResourceNotFoundException.class, ()->{
-			bookServiceImpl.getAllBooks();
-		});
+		assertThrows(BookResourceNotFoundException.class, ()-> bookServiceImpl.getAllBooks());
 	}
 
 	@Test
@@ -99,58 +97,50 @@ class BookServiceImplTestCase {
 	@Test
 	void testGetBooksById_negative() throws BookResourceNotFoundException {
 		when(bookRepository.findById("B001")).thenReturn(Optional.empty());
-		assertThrows(BookResourceNotFoundException.class, ()->{
-			bookServiceImpl.getBookById("B001");
-		});
+		assertThrows(BookResourceNotFoundException.class, ()-> bookServiceImpl.getBookById("B001"));
 	}
 
 	@Test
 	void testGetBooksByCategory_positive() throws BookResourceNotFoundException {
-		when(bookRepository.getByCategory(any())).thenReturn(Arrays.asList(book));
+		when(bookRepository.getByCategory(any())).thenReturn(Collections.singletonList(book));
 		//when(bookMapper.bookListToBookDTOList(any())).thenReturn(Arrays.asList(bookDTO));
 		when(modelMapper.map(book, BookDTO.class)).thenReturn(bookDTO);
 
         List<BookDTO> result = bookServiceImpl.getBooksByCategory("Fantasy");
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(bookDTO, result.get(0));
+        assertEquals(bookDTO, result.getFirst());
 
 	}
 
 	@Test
 	void testGetBooksByCategory_negative() throws BookResourceNotFoundException {
 		when(bookRepository.getByCategory("Fantasy")).thenReturn(Collections.emptyList());
-		assertThrows(BookResourceNotFoundException.class, ()->{
-			bookServiceImpl.getBooksByCategory("Fantasy");
-		});
+		assertThrows(BookResourceNotFoundException.class, ()-> bookServiceImpl.getBooksByCategory("Fantasy"));
 	}
 
 	@Test
 	void testGetBooksByAuthor_positive() throws BookResourceNotFoundException {
-		when(bookRepository.getByAuthor("JK Rowling")).thenReturn(Arrays.asList(book));
+		when(bookRepository.getByAuthor("JK Rowling")).thenReturn(Collections.singletonList(book));
 		//when(bookMapper.bookListToBookDTOList(any())).thenReturn(Arrays.asList(bookDTO));
 		when(modelMapper.map(book, BookDTO.class)).thenReturn(bookDTO);
 
         List<BookDTO> result = bookServiceImpl.getBooksByAuthor("JK Rowling");
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(bookDTO, result.get(0));
+        assertEquals(bookDTO, result.getFirst());
 
 	}
 
 	@Test
 	void testGetBooksByAuthor_negative() throws BookResourceNotFoundException {
 		when(bookRepository.getByAuthor("JK Rowling")).thenReturn(Collections.emptyList());
-		assertThrows(BookResourceNotFoundException.class, ()->{
-			bookServiceImpl.getBooksByAuthor("JK Rowling");
-		});
+		assertThrows(BookResourceNotFoundException.class, ()-> bookServiceImpl.getBooksByAuthor("JK Rowling"));
 	}
 
 	@Test
 	public void testFilter_NoCriteriaProvided_ShouldThrowException() {
-		assertThrows(IllegalArgumentException.class, () -> {
-			bookServiceImpl.filter();
-		});
+		assertThrows(IllegalArgumentException.class, () -> bookServiceImpl.filter());
 	}
 
 	@Test
@@ -159,22 +149,20 @@ class BookServiceImplTestCase {
 		when(bookRepository.getByAuthor(criterion)).thenReturn(Collections.emptyList());
 		when(bookRepository.getByCategory(criterion)).thenReturn(Collections.emptyList());
 
-		assertThrows(BookResourceNotFoundException.class, () -> {
-			bookServiceImpl.filter(criterion);
-		});
+		assertThrows(BookResourceNotFoundException.class, () -> bookServiceImpl.filter(criterion));
 	}
 @Test
 public void testFilter_ByAuthor_ShouldReturnBooks() throws BookResourceNotFoundException {
 	String author = "Author1";
 	List<Book> booksByAuthor = Arrays.asList(
-			new Book("1", "Book1", 10.0, 1L, 1, 1),
-			new Book("2", "Book2", 15.0, 2L, 1, 2)
+			new Book("1", "Book1", 10.0, 1, 1),
+			new Book("2", "Book2", 15.0, 1, 2)
 	);
 	when(bookRepository.getByAuthor(author)).thenReturn(booksByAuthor);
 	when(bookRepository.getByCategory(anyString())).thenReturn(Collections.emptyList());
 	when(modelMapper.map(any(Book.class), eq(BookDTO.class))).thenAnswer(invocation -> {
 		Book book = invocation.getArgument(0);
-		return new BookDTO(book.getBookID(), book.getTitle(), book.getPrice(), book.getInventoryID(), book.getAuthorID(), book.getCategoryID());
+		return new BookDTO(book.getBookID(), book.getTitle(), book.getPrice(), book.getAuthorID(), book.getCategoryID());
 	});
 
 	List<BookDTO> result = bookServiceImpl.filter(author);
@@ -188,14 +176,14 @@ public void testFilter_ByAuthor_ShouldReturnBooks() throws BookResourceNotFoundE
 	public void testFilter_ByCategory_ShouldReturnBooks() throws BookResourceNotFoundException {
 		String category = "Category1";
 		List<Book> booksByCategory = Arrays.asList(
-				new Book("1", "Book1", 10.0, 1L, 1, 1),
-				new Book("2", "Book2", 15.0, 2L, 2, 1)
+				new Book("1", "Book1", 10.0, 1, 1),
+				new Book("2", "Book2", 15.0, 2, 1)
 		);
 		when(bookRepository.getByCategory(category)).thenReturn(booksByCategory);
 		when(bookRepository.getByAuthor(anyString())).thenReturn(Collections.emptyList());
 		when(modelMapper.map(any(Book.class), eq(BookDTO.class))).thenAnswer(invocation -> {
 			Book book = invocation.getArgument(0);
-			return new BookDTO(book.getBookID(), book.getTitle(), book.getPrice(), book.getInventoryID(), book.getAuthorID(), book.getCategoryID());
+			return new BookDTO(book.getBookID(), book.getTitle(), book.getPrice(), book.getAuthorID(), book.getCategoryID());
 		});
 
 		List<BookDTO> result = bookServiceImpl.filter(category);
@@ -210,17 +198,17 @@ public void testFilter_ByAuthor_ShouldReturnBooks() throws BookResourceNotFoundE
 		String author = "Author1";
 		String category = "Category1";
 		List<Book> booksByAuthor = Arrays.asList(
-				new Book("1", "Book1", 10.0, 1L, 1, 1),
-				new Book("2", "Book2", 15.0, 2L, 1, 2)
+				new Book("1", "Book1", 10.0, 1, 1),
+				new Book("2", "Book2", 15.0, 1, 2)
 		);
-		List<Book> booksByCategory = Arrays.asList(
-				new Book("1", "Book1", 10.0, 1L, 1, 1)
-		);
+		List<Book> booksByCategory = List.of(
+                new Book("1", "Book1", 10.0, 1, 1)
+        );
 		when(bookRepository.getByAuthor(author)).thenReturn(booksByAuthor);
 		when(bookRepository.getByCategory(category)).thenReturn(booksByCategory);
 		when(modelMapper.map(any(Book.class), eq(BookDTO.class))).thenAnswer(invocation -> {
 			Book book = invocation.getArgument(0);
-			return new BookDTO(book.getBookID(), book.getTitle(), book.getPrice(), book.getInventoryID(), book.getAuthorID(), book.getCategoryID());
+			return new BookDTO(book.getBookID(), book.getTitle(), book.getPrice(), book.getAuthorID(), book.getCategoryID());
 		});
 
 		List<BookDTO> result = bookServiceImpl.filter(author, category);
@@ -230,21 +218,11 @@ public void testFilter_ByAuthor_ShouldReturnBooks() throws BookResourceNotFoundE
 		verify(bookRepository, times(2)).getByCategory(category);
 	}
 
-//	@Test
-//	void testAddBook_negative() throws BookResourceNotFoundException {
-//		when(modelMapper.map(bookDTO, Book.class)).thenReturn(book);
-//		when(bookRepository.save(book)).thenReturn(null);
-//
-//		boolean result = bookServiceImpl.addBook(bookDTO);
-//
-//		assertFalse(result);
-//		verify(modelMapper, times(1)).map(bookDTO, Book.class);
-//		verify(bookRepository, times(1)).save(book);
-//	}
 @Test
-public void testAddBook_Positive() throws BookResourceNotFoundException{
+void testAddBook_Positive() throws BookResourceNotFoundException{
 	when(modelMapper.map(bookDTO, Book.class)).thenReturn(book);
 	when(bookRepository.save(book)).thenReturn(book);
+	when(inventoryInterface.addBookToInventory(book.getBookID(), 1)).thenReturn(ResponseEntity.ok("Book added"));
 
 	boolean result = bookServiceImpl.addBook(bookDTO);
 
@@ -253,11 +231,8 @@ public void testAddBook_Positive() throws BookResourceNotFoundException{
 }
 
 	@Test
-	public void testAddBook_Negative() {
-		assertThrows(BookResourceNotFoundException.class, ()->{
-			bookServiceImpl.addBook(null);
-		});
-		//assertFalse(result);
+	void testAddBook_Negative() {
+		assertThrows(BookResourceNotFoundException.class, ()-> bookServiceImpl.addBook(null));
 		verify(bookRepository, never()).save(any(Book.class));
 	}
 
@@ -278,9 +253,7 @@ public void testAddBook_Positive() throws BookResourceNotFoundException{
 	void testDeleteBookById_negative() {
 		when(bookRepository.findById(any())).thenReturn(Optional.empty());
 
-		assertThrows(BookResourceNotFoundException.class, () -> {
-			bookServiceImpl.deleteBookById(any());
-		});
+		assertThrows(BookResourceNotFoundException.class, () -> bookServiceImpl.deleteBookById(any()));
 
 		verify(bookRepository, times(1)).findById(any());
 		verify(bookRepository, times(0)).deleteById(any());
@@ -301,12 +274,10 @@ public void testAddBook_Positive() throws BookResourceNotFoundException{
 	}
 
 	@Test
-	void testDeleteBookByTitle_negative() throws BookResourceNotFoundException {
+	void testDeleteBookByTitle_negative(){
 		when(bookRepository.findByTitle(any())).thenReturn(Optional.empty());
 
-		assertThrows(BookResourceNotFoundException.class, () -> {
-			bookServiceImpl.deleteBookByTitle(any());
-		});
+		assertThrows(BookResourceNotFoundException.class, () -> bookServiceImpl.deleteBookByTitle(any()));
 
 		verify(bookRepository, times(1)).findByTitle(any());
 		verify(bookRepository, times(0)).deleteByTitle(any());
@@ -318,14 +289,12 @@ public void testAddBook_Positive() throws BookResourceNotFoundException{
 		book.setPrice(450);
 		book.setAuthorID(123);
 		book.setCategoryID(456);
-		book.setInventoryID(1);
 		book.setTitle("Wimpy Kid");
 
 		bookDTO.setBookID("B001");
-		bookDTO.setTitle("Booknew");
+		bookDTO.setTitle("Book New");
 		bookDTO.setAuthorID(123);
 		bookDTO.setCategoryID(456);
-		bookDTO.setInventoryID(789);
 		bookDTO.setPrice(236.0);
 
 		when(bookRepository.findById(any())).thenReturn(Optional.of(book));
@@ -337,14 +306,12 @@ public void testAddBook_Positive() throws BookResourceNotFoundException{
 	}
 
 	@Test
-	void testUpdateBookById_negative() throws BookResourceNotFoundException {
+	void testUpdateBookById_negative(){
 		when(bookRepository.findById(any())).thenReturn(Optional.empty());
 
-		assertThrows(BookResourceNotFoundException.class, () -> {
-			bookServiceImpl.updateBookById(null, bookDTO);
-		});
+		assertThrows(BookResourceNotFoundException.class, () -> bookServiceImpl.updateBookById(null, bookDTO));
 
 		verify(bookRepository, times(1)).findById(any());
-		verify(bookRepository, times(0)).updateBookById("B001", "Booknew", 123, 456, 789, 236);
+		verify(bookRepository, times(0)).updateBookById("B001", "Book New", 123, 789, 236);
 	}
 }
